Initial cut a a Giter8 template.