@@ -15,6 +15,8 @@ import de.heikoseeberger.sbtheader.license.Apache2_0
 import tut.TutPlugin.autoImport._
 import GhpagesPlugin.autoImport._
 import com.lightbend.paradox.sbt.ParadoxPlugin.autoImport._
+import giter8.Giter8Plugin
+import giter8.Giter8Plugin.autoImport.g8Test
 
 /**
  * @author sfitch
@@ -49,6 +51,7 @@ object ProjectPlugin extends AutoPlugin {
       "locationtech-releases" at "https://repo.locationtech.org/content/groups/releases"
     ),
     libraryDependencies ++= Seq(
+      "com.chuusai" %% "shapeless" % "2.0.0",
       spark("core") % Provided,
       spark("mllib") % Provided,
       spark("sql") % Provided,
@@ -60,6 +63,7 @@ object ProjectPlugin extends AutoPlugin {
       ),
       "org.scalatest" %% "scalatest" % "3.0.3" % Test
     ),
+    excludeDependencies += "com.lightbend.paradox" % "paradox-theme-generic",
     publishArtifact in Test := false,
     fork in Test := true,
     javaOptions in Test := Seq("-Xmx2G"),
@@ -133,6 +137,17 @@ object ProjectPlugin extends AutoPlugin {
       // NB: These don't seem to work. Still trying to figure Tut's run model.
       fork in (Tut, run) := true,
       javaOptions in (Tut, run) := Seq("-Xmx6G")
+    )
+
+    def giter8Settings: Seq[Def.Setting[_]] = Seq(
+      test in Test := {
+        val _ = (
+          (test in Test).value,
+          (g8Test in Test).toTask("").value
+        )
+      }
+      // scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
+      //resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
     )
   }
 }
